Added question-tile to render on index template

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,8 +1,10 @@
 <h2>Welcome to Fora!</h2>
+
+<h3>What's your Question....Ask anything!</h3>
+
 <ul>
   {{#each model as |question|}}
-    <p>{{question.content}}</p>
-    <p>{{question.author}}</p>
+  {{question-tile question=question}}
   {{/each}}
 </ul>
 
