--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,9 +4,10 @@
 
 <ul>
   {{#each model as |question|}}
-  {{question-tile question=question}}
+    {{question-tile question=question update="update"}}
   {{/each}}
 </ul>
 
 {{new-question saveQuestion2="saveQuestion3"}}
+
 {{outlet}}
