Added bootstrap styling

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,10 @@
-{{outlet}}
+<div class= "container">
+  <header class= "jumbotron">
+    <h1>FORA</h1>
+  </header>
+    {{outlet}}
+  <hr>
+  <footer>
+    <p>Our representatives would love to help!</p>
+  </footer>
+</div>
