--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <div class= "container">
   <header class= "jumbotron">
-    <h1>FORA</h1>
+    <a href="/"><h1>FORA</h1></a>
   </header>
     {{outlet}}
   <hr>
