--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,9 +4,11 @@
 
 {{new-question saveQuestion2="saveQuestion3"}}
 
+<h3>Your Questions:</h3>
+
 <ul>
   {{#each model as |question|}}
-    {{question-tile question=question update="update"}}
+    {{question-tile question=question}}
   {{/each}}
 </ul>
 
