Moved model output of question details

--- a/app/templates/questions.hbs
+++ b/app/templates/questions.hbs
@@ -1,6 +1,6 @@
 <h2>Questions</h2>
-<h3>By: {{model.author}}</h3>
-<h2>{{model.content}}</h2>
+
+{{question-details question=model}}
 
 {{update-question question=model update="update"}}
 
