Modified question-tile to answer-tile

--- a/app/templates/components/question-details.hbs
+++ b/app/templates/components/question-details.hbs
@@ -1,4 +1,11 @@
 <h3>By: {{question.author}}</h3>
 <h2>{{question.content}}</h2>
 
+<h2> Answer </h2>
+<ul>
+  {{#each question.answers as |answer|}}
+    {{answer-tile answer=answer}}
+  {{/each}}
+</ul>
+
 {{yield}}
