Modified position of adding question

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,7 +7,7 @@
 <h3>Your Questions:</h3>
 
 <ul>
-  {{#each model as |question|}}
+  {{#each model.questions as |question|}}
     {{question-tile question=question}}
   {{/each}}
 </ul>
