Added cancel button

--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -12,6 +12,7 @@
         {{input value=content id="content"}}
       </div>
       <button {{action 'saveQuestion1'}}>Post Question</button>
+      <button {{action 'cancelForm'}}>Cancel</button>
     </form>
   </div>
 {{else}}
