Added and modifed cancel button

--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -10,11 +10,12 @@
         <label for="content">Answer</label>
         {{input value=content id="content"}}
       </div>
-      <button {{action 'saveAnswer'}}>Save</button>
+      <button type="button" class="btn btn-success"{{action 'saveAnswer'}}>Save</button>
+      <button type="button" class="btn btn-danger"{{action 'cancelAnswerForm'}}>Cancel</button>
     </form>
   </div>
 {{else}}
-  <button {{action 'answerFormShow'}}>Answer Question</button>
+  <button type="button" class="btn btn-primary"{{action 'answerFormShow'}}>Answer Question</button>
 {{/if}}
 
 {{yield}}
