Added link to index for the header

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <div class= "container">
   <header class= "jumbotron">
-    <a href="/"><h1>FORA</h1></a>
+    {{#link-to 'index'}}<h1>FORA</h1>{{/link-to}}
   </header>
     {{outlet}}
   <hr>
