--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -8,7 +8,7 @@
 
 <ul>
   {{#each model.questions as |question|}}
-    {{question-tile question=question}}
+    {{large-answers question}}{{question-tile question=question}}
   {{/each}}
 </ul>
 
