Rendered the current answeredDate

--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -1,3 +1,3 @@
-<li>{{answer.content}}<br> By: {{answer.author}} <hr></li>
+<li>{{answer.content}}<br> By: {{answer.author}} <br>Posted on: {{answer.answeredDate}} <hr></li>
 
 {{yield}}
