--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,3 +1,3 @@
-{{#link-to 'questions' question.id}}{{question.author}} <br> {{question.content}} <br> Posted on: {{question.createDate}} <hr>{{/link-to}}
+{{#link-to 'questions' question.id}}{{question.author}} <br> {{question.content}} <br> Posted on: {{question.postedDate}} <hr>{{/link-to}}
 
 {{yield}}
