Changed display format to answer

--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -10,7 +10,7 @@
         <label for="content">Answer</label>
         {{input value=content id="content"}}
       </div>
-      <button type="button" class="btn btn-success"{{action 'saveAnswer'}}>Save</button>
+      <button type="button" class="btn btn-success"{{action 'saveAnswer'}}>Answer</button>
       <button type="button" class="btn btn-danger"{{action 'cancelAnswerForm'}}>Cancel</button>
     </form>
   </div>
