Added upvote and downvote buttons

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,3 +1,7 @@
-{{#link-to 'questions' question.id}}{{question.author}} <br> {{question.content}} <br> <em>Posted on: {{question.postedDate}}</em> <hr>{{/link-to}}
-
+{{#link-to 'questions' question.id}}{{question.author}} <br> {{question.content}} <br> <em>Posted on: {{question.postedDate}}</em>{{/link-to}}
+<br>
+<button class="btn btn-success"{{action 'upVote' question}}>Upvote</button>
+<button class="btn btn-danger"{{action 'downVote' question}}>Downvote</button>
+{{question.totalVotes}}
+<hr>
 {{yield}}
