Added answer totalvotes rendering

--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -2,7 +2,7 @@
 <br>
 <button class="btn btn-success"{{action 'upVote' question}}>Upvote</button>
 <button class="btn btn-danger"{{action 'downVote' question}}>Downvote</button>
-{{question.totalVotes}}
+{{answer.totalVotes}}
 <hr>
 
 {{yield}}
